# tone.rs

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/tone-app/: Cargo.toml  tauri.conf.json
crates/tone-app/capabilities/: default.json
crates/tone-app/frontend/: index.html
crates/tone-app/src/: main.rs
crates/tone-core/: Cargo.toml
crates/tone-core/src/: backend.rs  engine.rs  graph.rs  lib.rs  mixer.rs
crates/tone-core/src/clock/: transport.rs
crates/tone-core/src/component/: envelope.rs  gain.rs  mod.rs
crates/tone-core/src/component/dynamics/: compressor.rs
crates/tone-core/src/effect/: delay.rs  distortion.rs  freeverb.rs  mod.rs
crates/tone-core/src/event/: mod.rs  sequence.rs
crates/tone-core/src/instrument/: fm_synth.rs  mod.rs  poly_synth.rs  synth.rs
crates/tone-core/src/signal/: param.rs
crates/tone-core/src/source/: grain_player.rs  lfo.rs  mod.rs  noise.rs  oscillator.rs  player.rs
crates/tone-core/src/time/: context.rs  expr.rs  frequency.rs  mod.rs  notation.rs  value.rs
crates/tone-core/src/util/: timeline.rs
crates/tone-cpal/: Cargo.toml
crates/tone-cpal/examples/: envelope_demo.rs  simple_synth.rs
crates/tone-cpal/src/: backend.rs
crates/tone-wasm/: Cargo.toml
crates/tone-wasm/src/: lib.rs
crates/tones-app/: Cargo.toml  tauri.conf.json
crates/tones-app/capabilities/: default.json
crates/tones-app/frontend/: index.html
crates/tones-app/src/: main.rs
crates/tones-core/: Cargo.toml
crates/tones-core/src/: graph.rs  lib.rs  mixer.rs
crates/tones-core/src/clock/: mod.rs
crates/tones-core/src/component/: envelope.rs  mod.rs
crates/tones-core/src/effect/: delay.rs  filter.rs
crates/tones-core/src/event/: sequence.rs
crates/tones-core/src/instrument/: mod.rs  poly_synth.rs  synth.rs
crates/tones-core/src/signal/: param.rs
crates/tones-core/src/source/: mod.rs  player.rs
crates/tones-core/src/time/: frequency.rs  notation.rs
crates/tones-cpal/: Cargo.toml
crates/tones-cpal/examples/: envelope_demo.rs  simple_synth.rs
crates/tones-cpal/src/: backend.rs  lib.rs
crates/tones-wasm/: Cargo.toml
crates/tones-wasm/src/: lib.rs
