[package]
name = "tone-app"
description = "Tauri app for testing tone-rs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tone-core = { path = "../tone-core" }
tone-cpal = { path = "../tone-cpal" }
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
