[package]
name = "tones-app"
description = "Tauri app for testing tones-rs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tones-core = { path = "../tones-core" }
tones-cpal = { path = "../tones-cpal" }
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
